crates/plotnik-tests/tests/02-parser/recovery_validation/captured_negated_field_with_capture_type.txt
Q = (pair -key @x :: T)
------------------ DIAGNOSTICS -------------------
error: negated grammar fields cannot be captured
 --> query.ptk:1:16
  |
1 | Q = (pair -key @x :: T)
  |                ^^
  |
help: remove the capture
  |
1 - Q = (pair -key @x :: T)
1 + Q = (pair -key  :: T)
  |
help: a negated grammar field asserts absence and produces no value

error: expected a child node, or `)` to close
 --> query.ptk:1:19
  |
1 | Q = (pair -key @x :: T)
  |                   ^^

error: references must be parenthesized
 --> query.ptk:1:22
  |
1 | Q = (pair -key @x :: T)
  |                      ^
  |
help: wrap in parentheses
  |
1 - Q = (pair -key @x :: T)
1 + Q = (pair -key @x :: (T))
  |
